# quickjs-java

./: README.md  all.sh  build-jar.sh  build-wasm.sh  download-libs.sh  env.sh  logging.properties  pom.xml  test.sh
src/builder/: ChicoryLibraryGenerator.java
src/main/java/com/bfo/quickjs/: JSArray.java  JSComputedValue.java  JSContext.java  JSException.java  JSFunction.java  JSLogger.java  JSModuleResolver.java  JSObject.java  JSPromise.java  JSRuntime.java  JSRuntimeMemory.java  JSType.java  Packer.java  Task.java  TaskManager.java
src/main/rust/quickjslib/: Cargo.toml
src/main/rust/quickjslib/wasm_lib/: Cargo.toml
src/main/rust/quickjslib/wasm_lib/src/: completable_future.rs  context.rs  from_error.rs  into_wasm_result.rs  java_log.rs  js_to_java_proxy.rs  lib.rs  native_array.rs  native_object.rs  quickjs_function.rs  runtime.rs
src/main/rust/quickjslib/wasm_macros/: Cargo.toml
src/main/rust/quickjslib/wasm_macros/src/: lib.rs
src/test/java/com/bfo/quickjs/: ArrayBufferTest.java  JSContextTest.java  ModuleTest.java  TestHarness.java
