[workspace]
resolver = "2"
members = [
    "wasm_lib",
    "wasm_macros",
]

[profile.release]
opt-level = 's'     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Allow LLVM to optimize more aggressively across the whole crate
panic = 'abort'     # Removes stack unwinding code (saves a lot of space)