[package]
name = "wasm_lib"
version = "1.1.3"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies] 
wasm_macros = { path = "../wasm_macros" }
rmp-serde = "1.3"
log = { version = "0.4", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
rquickjs = { version = "0.11.0", features = [
    #  "dump-objects",
    #  "dump-read-object",
    #  "dump-bytecode",
] }